--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hHB-YO-hKY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hHB-YO-hKY">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,7 +28,7 @@
         <!--Name View Controller-->
         <scene sceneID="79b-Ju-u0x">
             <objects>
-                <viewController id="dJJ-Au-FIK" customClass="NameViewController" customModule="ScienceResearchApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="dJJ-Au-FIK" customClass="NameViewController" customModule="ScienceResearchApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VJJ-Cz-z1K">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -42,41 +43,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xMU-Zj-DiX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-33" y="-8"/>
-        </scene>
-        <!--Bucket List View Controller-->
-        <scene sceneID="w6g-7Q-9c6">
-            <objects>
-                <viewController id="ocx-kI-QC9" customClass="BucketListViewController" customModule="ScienceResearchApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="cfk-yj-STC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="tYX-Lm-IOD"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="es6-63-Y0H"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xmh-Ze-bR8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="762" y="-8"/>
-        </scene>
-        <!--Pushthe Stack View Controller-->
-        <scene sceneID="fVg-AN-xMH">
-            <objects>
-                <viewController id="c53-us-I2X" customClass="BLPushtheStackViewController" customModule="ScienceResearchApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ggz-sZ-GOo">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="rTs-py-RTA"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="SxK-ck-Dka"/>
-                    <connections>
-                        <segue destination="c5j-Fe-5V4" kind="show" id="bh3-zs-hKb"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CT4-1R-jIe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1483" y="-8"/>
         </scene>
         <!--Upload View Controller-->
         <scene sceneID="oZN-Dd-ckr">
@@ -104,18 +70,8 @@
                                     <action selector="uploadimage:" destination="c5j-Fe-5V4" eventType="touchDown" id="rr0-ed-hmg"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CBQ-kd-xqW">
-                                <rect key="frame" x="289" y="129" width="99" height="51"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Choose Image"/>
-                                <connections>
-                                    <action selector="choosingImage:" destination="c5j-Fe-5V4" eventType="touchDown" id="I9l-T0-7et"/>
-                                    <action selector="choosingimage:" destination="c5j-Fe-5V4" eventType="touchUpInside" id="n8c-Lz-8dN"/>
-                                    <action selector="upload:" destination="c5j-Fe-5V4" eventType="touchUpInside" id="GfV-to-Na7"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rhe-ya-9Kl">
-                                <rect key="frame" x="288" y="129" width="99" height="51"/>
+                                <rect key="frame" x="289" y="115" width="99" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Choose Image"/>
                                 <connections>
@@ -126,19 +82,28 @@
                         <viewLayoutGuide key="safeArea" id="9fa-B5-G1W"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Emd-eE-TgP"/>
+                    <navigationItem key="navigationItem" id="Emd-eE-TgP">
+                        <rightBarButtonItems>
+                            <barButtonItem id="g4u-J5-ueg"/>
+                            <barButtonItem systemItem="action" id="tcO-g1-MDC">
+                                <connections>
+                                    <action selector="shareImage:" destination="c5j-Fe-5V4" id="9Cg-sq-lcL"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
                     <connections>
                         <outlet property="imageView" destination="dDx-R8-6W6" id="R7f-NE-48E"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pyx-Cj-uED" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2292.753623188406" y="-4.0178571428571423"/>
+            <point key="canvasLocation" x="3077" y="-8"/>
         </scene>
         <!--Bucket List View Controller-->
         <scene sceneID="baN-pl-DoT">
             <objects>
-                <viewController id="5N1-Ce-sbM" customClass="BucketListViewController" customModule="ScienceResearchApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="5N1-Ce-sbM" customClass="BucketListViewController" customModule="ScienceResearchApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ivd-Cy-oHN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -147,12 +112,31 @@
                     </view>
                     <navigationItem key="navigationItem" id="pnV-c6-H2u"/>
                     <connections>
-                        <segue destination="c53-us-I2X" kind="show" id="bGS-8d-RaZ"/>
+                        <segue destination="cTd-BM-lgn" kind="show" id="DJu-Di-4KN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qu1-TG-HOH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="762" y="-8"/>
+            <point key="canvasLocation" x="796" y="-8"/>
+        </scene>
+        <!--Pushthe Stack View Controller-->
+        <scene sceneID="PTm-LU-QEz">
+            <objects>
+                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="cTd-BM-lgn" customClass="BLPushtheStackViewController" customModule="ScienceResearchApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PkF-ip-yOL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="fkH-by-kEt"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ahe-Cj-7ht"/>
+                    <connections>
+                        <segue destination="c5j-Fe-5V4" kind="show" id="3LK-Xd-JL5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YSH-tk-ifO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1736" y="-8"/>
         </scene>
     </scenes>
     <resources>
